# Galley

./: .gitignore  AUTHORS  Berksfile  ChangeLog  README.md  README.rst  Vagrantfile  requirements.txt  setup.cfg  setup.py  test-requirements.txt
galley/: __init__.py  builder.py  shell.py  test.py
