[metadata]
name = galley
summary = End-to-end test orchestration with Docker
description-file =
    README.md
author = Ryan Walker
author-email = ryan@wlkr.io
home-page = http://github.com/ryandub/galley

[files]
packages =
    galley

[entry_points]
console_scripts =
    galley = galley.shell:main
