[metadata]
name = galley
summary = End-to-end test orchestration with Docker
description-file =
    README.rst
author = Ryan Walker
author-email = ryan@wlkr.io
home-page = http://github.com/rackerlabs/galley

[files]
packages =
    galley

[entry_points]
console_scripts =
    galley = galley.shell:main
